Updates para 3 entrega

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <form id="familyInfo" class="familyinfo">
         <h2>Crea una tarjeta de un familiar</h2>
+        <label for="familyMemberImage">Agregar imagen:</label>
+        <input type="file" id="familyMemberImage" accept="image/*" required>
         <label id='name-label' for="familyMemberName">Nombre</label>
         <input type="text" id="familyMemberName" placeholder="ingresa el nombre">
         <label id='lastname-label' for="familyMemberLastName">Apellido</label>
@@ -50,6 +52,7 @@
     No va a ser parte del proyecto final esto , voy a arrancar uno nuevo esta semana e ir implementando lo visto en clases a medida que vaya poniendome al dia y entendiendo mejor. Gracias -->
 
     <script src='script.js'></script>
+    <script src='scriptimpro.js'></script>
 </body>
 
 </html>
