--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <form id="familyInfo" class="familyinfo">
         <h2>Crea una tarjeta de un familiar</h2>
-        <label for="familyMemberImage">Agregar imagen:</label>
-        <input type="file" id="familyMemberImage" accept="image/*" required>
+        <label for="familyMemberImage">Agregar imagen URL:</label>
+        <input type="text" id="familyMemberImage" accept="image/*" required>
         <label id='name-label' for="familyMemberName">Nombre</label>
         <input type="text" id="familyMemberName" placeholder="ingresa el nombre">
         <label id='lastname-label' for="familyMemberLastName">Apellido</label>
